<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh"
    tools:context="com.example.hp.carauction.Spalsh"
    tools:ignore="GradleDependency"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="307dp"
        android:layout_height="79dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="italic"
        android:textDirection="firstStrongLtr"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="323dp"
        android:layout_height="70dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textAlignment="gravity"
        android:defaultFocusHighlightEnabled="true"
        android:textColorHighlight="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/h2c"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ButtonSpalsh"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintHorizontal_bias="0.505"
        tools:ignore="UnusedAttribute"
        tools:layout_editor_absoluteY="315dp"
        tools:layout_editor_absoluteX="14dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/approach"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonSpalsh"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:text="@string/go4it"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteY="448dp"
        tools:layout_editor_absoluteX="129dp" />

</android.support.constraint.ConstraintLayout>
