<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/perfect"
    tools:context="com.example.hp.carauction.Login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="193dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="47dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/User_Login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="268dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/enter_mail"
        android:textColor="@color/black"

        android:textStyle="bold"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintVertical_bias="0.85"
        tools:layout_editor_absoluteY="155dp"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="278dp"
        android:layout_height="73dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="249dp"
        tools:layout_editor_absoluteX="35dp"
        app:layout_constraintVertical_bias="0.501" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="192dp"
        android:layout_height="61dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/SIGN_UP"
        android:textColor="@color/black"
        android:backgroundTint="@color/backtobutton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_editor_absoluteY="326dp"
        tools:layout_editor_absoluteX="65dp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="262dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/notalready"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.886" />

</android.support.constraint.ConstraintLayout>
