<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign"
    tools:context="com.example.hp.carauction.Sign_up"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    tools:ignore="GradleDependency">

    <EditText
        android:id="@+id/email_id"
        android:layout_width="323dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:textStyle="bold"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintBottom_toTopOf="@+id/pass"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="47dp"
        tools:layout_editor_absoluteX="28dp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="313dp"
        android:layout_height="66dp"
        android:ems="10"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintBottom_toTopOf="@+id/show_hide_password"
        app:layout_constraintTop_toBottomOf="@+id/email_id"
        tools:layout_editor_absoluteY="170dp"
        tools:layout_editor_absoluteX="46dp" />


    <Button
        android:id="@+id/login"
        android:textStyle="bold"
        android:layout_width="252dp"
        android:layout_height="74dp"
        android:layout_below="@+id/show_hide_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="401dp"
        android:text="@string/Register"
        android:textSize="18sp"
        android:textColorHighlight="@color/black"
        android:background="@color/darkblue"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.013"
        app:layout_constraintHorizontal_bias="0.513"
        tools:layout_editor_absoluteX="62dp" />


    <CheckBox
        android:id="@+id/show_hide_password"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:text="@string/Show_Password"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_below="@+id/pass"
        android:layout_alignLeft="@+id/login"
        android:layout_alignStart="@+id/login"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


    <Button
        android:id="@+id/textViewSignin"
        android:layout_width="322dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:background="@drawable/perfect"
        android:text="@string/already"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.928" />

</android.support.constraint.ConstraintLayout>
